Исправлен файловый сервер, добавлено получение аватарки.
