# docs/swagger.json
@@ -1,16 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API почтового сервиса команды Overflow.",
-        "title": "OverMail API",
-        "contact": {
-            "name": "Роман Медников",
-            "url": "https://vk.com/l____l____l____l____l____l",
-            "email": "jellybe@yandex.ru"
-        },
-        "version": "1.0"
+        "contact": {}
     },
-    "basePath": "/",
     "paths": {
         "/income": {
             "get": {
@@ -29,7 +21,10 @@
                         }
                     },
                     "401": {
-                        "description": "Сессия отсутствует, сессия не валидна."
+                        "description": "Ошибка БД, сессия отсутствует или сессия не валидна."
+                    },
+                    "405": {
+                        "description": ""
                     },
                     "500": {
                         "description": ""
@@ -45,7 +40,10 @@
                 "summary": "Завершение сессии пользователя",
                 "responses": {
                     "200": {
-                        "description": "Успешное завершение сессии."
+                        "description": "Успешное завершение сессии.",
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     "401": {
                         "description": "Сессия отсутствует, сессия не валидна."
@@ -73,7 +71,10 @@
                         }
                     },
                     "401": {
-                        "description": "Access denied"
+                        "description": "Ошибка БД, сессия отсутствует или сессия не валидна."
+                    },
+                    "405": {
+                        "description": ""
                     },
                     "500": {
                         "description": ""
@@ -86,19 +87,44 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Получение данных профиля пользователя",
+                "summary": "Получение данных пользователя",
                 "responses": {
                     "200": {
                         "description": "Информация о пользователе",
                         "schema": {
-                            "$ref": "#/definitions/models.SettingsForm"
+                            "$ref": "#/definitions/models.User"
                         }
                     },
                     "401": {
                         "description": "Сессия отсутствует, сессия не валидна."
                     },
+                    "405": {
+                        "description": ""
+                    },
                     "500": {
                         "description": "Ошибка БД, пользователь не найден, неверные данные сессии."
+                    }
+                }
+            }
+        },
+        "/profile/avatar": {
+            "get": {
+                "produces": [
+                    "text/plain"
+                ],
+                "summary": "Получение ссылки на аватарку пользователя",
+                "responses": {
+                    "200": {
+                        "description": "Ссылка на аватарку в формате /{static_dir}/{file}.{ext}.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "405": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": "Ошибка БД, пользователь не найден или сессия не валидна."
                     }
                 }
             }
@@ -125,7 +151,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Успешное изменение настроек."
+                        "description": "Успешное изменение настроек.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "405": {
+                        "description": ""
                     },
                     "500": {
                         "description": "Ошибка валидации формы, БД или сессия не валидна."
@@ -153,7 +185,13 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Успешное установка аватарки."
+                        "description": "Успешное установка аватарки.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "405": {
+                        "description": ""
                     },
                     "500": {
                         "description": "Ошибка валидации формы, БД или сессия не валидна."
@@ -183,7 +221,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Успешная аутентификация пользователя."
+                        "description": "Успешная аутентификация пользователя.",
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     "500": {
                         "description": "Пользователь не существует, ошибка БД или валидации формы."
@@ -213,7 +254,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Успешная регистрация пользователя."
+                        "description": "Успешная регистрация пользователя.",
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     "500": {
                         "description": "Ошибка валидации формы, БД или пользователь уже существует."
@@ -253,11 +297,14 @@
         "models.SettingsForm": {
             "type": "object",
             "properties": {
-                "avatar_url": {
+                "first_name": {
                     "type": "string"
                 },
-                "user": {
-                    "$ref": "#/definitions/models.User"
+                "last_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         },
